# node-based-image-processor

./: CMakeLists.txt  README.md  node-based-image-processor.sln
node-based-image-processor/: ImageEditorApp.cpp  ImageEditorApp.h  NodeEditor.json  Widgets.json  main.cpp  node-based-image-processor.vcxproj  node-based-image-processor.vcxproj.filters  temppp.json
node-based-image-processor/node-editor/: ImageDataManager.cpp  ImageDataManager.h  Node.cpp  Node.h  NodeEditorManager.cpp  NodeEditorManager.h
node-based-image-processor/node-editor/nodes/: BlendNode.cpp  BlendNode.h  BlurNode.cpp  BlurNode.h  BrightnessContrastNode.cpp  BrightnessContrastNode.h  ColorChannelSplitterNode.cpp  ColorChannelSplitterNode.h  ConvolutionFilterNode.cpp  ConvolutionFilterNode.h  EdgeDetectionNode.cpp  EdgeDetectionNode.h  InputNode.cpp  InputNode.h  NoiseGenerationNode.cpp  NoiseGenerationNode.h  OutputNode.cpp  OutputNode.h  ThresholdNode.cpp  ThresholdNode.h
node-based-image-processor/nodes/: Node.cpp  Node.h
